fix overflow

--- a/javajam.css
+++ b/javajam.css
@@ -20,6 +20,7 @@ a:hover {
 a:visited {
     color: #fdd2aa;
 }
+a:active {color:red;}
 
 header {
     background-color: #ffffff;
@@ -98,7 +99,7 @@ div {
     max-width: 1280px;
     margin-right: auto;
     margin-left: auto;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .contacts {
